# slot

./: .env.example  .gitignore  README.MD  pyproject.toml
src/slot/: __init__.py  cli.py  config.py  exporters.py  filters.py  models.py  scraper.py  storage.py  web.py
src/slot/templates/: add.html  auth.html  base.html  index.html  results.html  scrape.html
tests/: test_filters.py  test_models.py
